; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_cxgb4_main.c_t4_fatal_err.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb4/extr_cxgb4_main.c_t4_fatal_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@SGE_CONTROL = common dso_local global i32 0, align 4
@GLOBALENABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"encountered fatal error, adapter stopped\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @t4_fatal_err(%struct.adapter* %0) #0 {
  %2 = alloca %struct.adapter*, align 8
  store %struct.adapter* %0, %struct.adapter** %2, align 8
  %3 = load %struct.adapter*, %struct.adapter** %2, align 8
  %4 = load i32, i32* @SGE_CONTROL, align 4
  %5 = load i32, i32* @GLOBALENABLE, align 4
  %6 = call i32 @t4_set_reg_field(%struct.adapter* %3, i32 %4, i32 %5, i32 0)
  %7 = load %struct.adapter*, %struct.adapter** %2, align 8
  %8 = call i32 @t4_intr_disable(%struct.adapter* %7)
  %9 = load %struct.adapter*, %struct.adapter** %2, align 8
  %10 = getelementptr inbounds %struct.adapter, %struct.adapter* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @dev_alert(i32 %11, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @t4_set_reg_field(%struct.adapter*, i32, i32, i32) #1

declare dso_local i32 @t4_intr_disable(%struct.adapter*) #1

declare dso_local i32 @dev_alert(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
